# fina

./: .gitignore  Cargo.toml  compose.yml  test
boilerplate/: Cargo.toml  Dockerfile  build.rs
boilerplate/src/: main.rs  services.rs
expr/: Cargo.toml  Dockerfile  Dockerfile.dev
expr/.sqlx/: query-6bbee411bdf8e511fecbd145a638c6785690e1a7d087672d846a27c5924070e8.json  query-8c54e6829fd130eac7e0370b698482f57f31292f31dd7bdfc93458b06841f95b.json  query-b65bfbe75b61db3481646147bdb787f4b0e137ee0bf9762176b87ac4e94b6cc8.json
expr/migrations/: 20240131213422_create_transaction_table.sql
expr/src/: cli.rs  database.rs  main.rs  service.rs  web.rs
expr/src/database/: base.rs  postgres.rs  redis.rs  textfile.rs
expr/src/models/: transaction.rs
expr/src/service/: parse.rs  transaction.rs
frontend/: .air.toml  go.mod  main.go
frontend/assets/: styles.css
frontend/templates/: hello.templ  hello_templ.go  index.templ  index_templ.go  test.html
grpc_test/: Cargo.toml  build.rs
grpc_test/src/: main.rs
import/: Cargo.toml
import/src/: cli.rs  main.rs  server.rs  service.rs
import/src/service/: parse_service.rs  service.rs
proto/: transaction.proto
src/: main.rs
transaction/: Cargo.toml  Dockerfile  build.rs  compose.yml
transaction/src/: main.rs  services.rs
transaction/src/database/: redis.rs
transaction/src/models/: transactions.rs
transaction/src/services/: transaction_service.rs
