[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
prost = "0.12.1"
redis = "0.23.3"
serde = { version = "1.0.192", features = ["serde_derive", "derive"] }
serde_json = "1.0.108"
tokio = { version = "1.33.0", features = ["full"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
